# OpenGLStart

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake  GenerateDoxygen.cmake  LTO.cmake  Sanitizers.cmake
cmake_configure/: CMakeLists.txt  config.hpp.in
docs/: Doxyfile
lib/: CMakeLists.txt  hello.cpp  hello.hpp  math.cpp  math.hpp
lib/tests/: CMakeLists.txt  math_test.cpp
maze/: CMakeLists.txt  maze.cpp
